Fixed bug where container was visible without content + added styling

--- a/css/home.css
+++ b/css/home.css
@@ -66,8 +66,10 @@ form button {
    display: none;
    flex-wrap: wrap;
    justify-content: center;
-   gap: 20px;
-   padding: 2em 10%;
+   gap: 3em;
+   padding: 2em;
+   width: 100%;
+   height: 100vh;
 }
 
 #results-container article {
